--- a/RateCalc_Plugin/files/manifest.json
+++ b/RateCalc_Plugin/files/manifest.json
@@ -29,8 +29,7 @@
         "js": [
             "https://js.cybozu.com/jquery/3.1.1/jquery.min.js",
             "https://js.cybozu.com/sweetalert/v1.1.3/sweetalert.min.js",
-            "js/config.js"
-        ],
+            "js/config.js"        ],
         "css": [
              "https://js.cybozu.com/sweetalert/v1.1.3/sweetalert.css",
              "css/config.css"
